Added a one flashcard per page feature
- Added a flashcard model that is in a relationship with the flashcards model
- Added a csrf token to creating preview_ai_notes
- Added a create button model for csrf tokening

--- a/Scholarly/templates/learn/flashcards_preview.html
+++ b/Scholarly/templates/learn/flashcards_preview.html
@@ -20,6 +20,7 @@
 </div>
 
 <form method="POST">
+  {{ create_button.hidden_tag() }}
   <div class="d-flex justify-content-between">
     <a href="{{ url_for('learn.home') }}" class="btn btn-outline-secondary">Back</a>
     <button type="submit" class="btn btn-success">Save Flashcards</button>
